--- a/index.html
+++ b/index.html
@@ -20,18 +20,44 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Nabla&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
-    <script src="scrip.js"></script>
 </head>
 
 <body>
 
-    <header class="header">
+    <header>
+        <div class="logo-section">
+            <img class="logo-funko" src="./img/LOGO.png" alt="logo" />
+            <p>Shop</p>
+        </div>
 
-        <div>
-            <a href="">
-                <span>LOGO</span>
-            </a>
+
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#who"><i class="bi bi-chat-right-dots"></i> Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#services"><i class="bi bi-hand-index-thumb"></i> Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#catalog"><i class="bi bi-book"></i> Catalogo
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href=""><i class="bi bi-send"></i> Contactanos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
             <ul>
                 <li class="submenu">
                     <img src="img/icons8-carrito-de-compras-30.png" id="img-carrito" alt="">
@@ -39,9 +65,9 @@
                         <table id="lista-carrito">
                             <thead>
                                 <tr>
-                                    <th>imagen</th>
-                                    <th>nombre</th>
-                                    <th>precio</th>
+                                    <th>Imagen</th>
+                                    <th>Nombre</th>
+                                    <th>Precio</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -50,10 +76,56 @@
                         <a href="#" id="vaciar-carrito" class="btn-1">Vaciar carrito</a>
                     </div>
                 </li>
+
             </ul>
-        </div>
-        </div>
+        </nav>
+
     </header>
+    <div class="promo">
+        <div class="prompo-txt">
+            <h2>Promociones</h2>
+        </div>
+    </div>
+
+    <div class="slider">
+        <input type="radio" name="slide" id="slide1" checked>
+        <input type="radio" name="slide" id="slide2">
+        <input type="radio" name="slide" id="slide3">
+
+        <div class="slide">
+            <div class="slide">
+                <img src="./img/deku.png" alt="Slide 1">
+                <div class="slide-content">
+                    <h2>Funko Pop Deku - My Hero Academia</h2>
+                    <p>$44.500,00</p>
+                    <a href="#" class="btn-comprar">Agregar al carrito</a>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="./img/deadpool.png" alt="Slide 2">
+                <div class="slide-content">
+                    <h2>Funko Pop Deadpool - Deadpool</h2>
+                    <p>$60.900,00</p>
+                    <a href="#" class="btn-comprar">Agregar al carrito</a>
+                </div>
+            </div>
+
+            <div class="slide">
+                <img src="./img/groot.png" alt="Slide 3">
+                <div class="slide-content">
+                    <h2>Funko Pop Groot - Guardianes de la Galaxia</h2>
+                    <p>$47.500,00</p>
+                    <a href="#" class="btn-comprar">Agregar al carrito</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="navigation">
+            <label for="slide1"></label>
+            <label for="slide2"></label>
+            <label for="slide3"></label>
+        </div>
+    </div>
     <nav>
         <div class="container">
             <div class="banner">
@@ -62,8 +134,8 @@
         </div>
     </nav>
     <main>
-            <!--seccion de productos-->
-      <section id="Products">
+        <!--seccion de productos-->
+        <section id="Products">
             <div class="product-content" id="product-1">
                 <img src="img/kisspng-more-of-the-joy-of-painting-funko-pop-television-b-bob-ross-5b359f86c0d2c4.4723694415302409027898.png"
                     alt="">
@@ -80,7 +152,8 @@
                 </div>
             </div>
             <div class="product-content" id="product-2">
-                <img src="img/ace.png" alt="">
+                <img src="img/kisspng-more-of-the-joy-of-painting-funko-pop-television-b-bob-ross-5b359f86c0d2c4.4723694415302409027898.png"
+                    alt="">
                 <div class="product-txt">
                     <h4>Funko Pop Ace - One Piece</h4>
                     <p>$59.999,00</p>
@@ -522,19 +595,51 @@
     </div>
     <script src="scrip.js"></script>
 
-    <footer class="footer">
-        <div class="footer-content container">
-            <div class="link">
-                <h3>Informacion de pie de pagina
-                </h3>
-                <ul>
-                    <li><a href="#">Inicio</a></li>
-                </ul>
+    <footer>
+        <section id="firstSectionFooter">
+            <div class="logo-section">
+                <img class="logo-funko" src="./img/LOGO.png" alt="logo" />
+                <p>Shop</p>
             </div>
-        </div>
+            <div class="ubi-section">
+                <p><i class="bi bi-geo"></i> Localidad</p>
+
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105082.52414775609!2d-58.513360161293896!3d-34.60848836981988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccbbb7c68078b%3A0xdc264e1614a96ae2!2sOficinas%20Codo%20a%20Codo(subsuelo)!5e0!3m2!1ses-419!2sar!4v1713243238747!5m2!1ses-419!2sar"
+                    width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+            <article id="contact-section">
+                <p>Irigoyen 272, C1072 CABA</p>
+                <p><i class="bi bi-telephone"></i>1123232731</p>
+                <p><i class="bi bi-envelope"></i> ventas@funkoshop.com.ar</p>
+            </article>
+
+            <article id="redesSociales">
+                <h3>Redes Sociales</h3>
+                <br />
+                <div id="iconos">
+                    <a href="https://twitter.com" target="_blank">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <i class="bi bi-facebook"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                </div>
+            </article>
+        </section>
+        <section id="secondSectionFooter">
+            <h6>Todos los derechos reservados @ 2024</h6>
+        </section>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
