se agrega cambios de codigo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
         href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Nabla&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,7 +29,7 @@
 
     <header>
         <div class="logo-section">
-            <img class="logo-funko" src="./img/LOGO.png" alt="logo" />
+            <img class="logo-funko" src="./img/LOGO.png" alt="logo">
             <p>Shop</p>
         </div>
 
@@ -592,13 +592,12 @@
             </div>
         </section>
     </main>
-    </div>
     <script src="scrip.js"></script>
 
     <footer>
         <section id="firstSectionFooter">
             <div class="logo-section">
-                <img class="logo-funko" src="./img/LOGO.png" alt="logo" />
+                <img class="logo-funko" src="./img/LOGO.png" alt="logo">
                 <p>Shop</p>
             </div>
             <div class="ubi-section">
@@ -618,7 +617,7 @@
 
             <article id="redesSociales">
                 <h3>Redes Sociales</h3>
-                <br />
+                <br>
                 <div id="iconos">
                     <a href="https://twitter.com" target="_blank">
                         <i class="bi bi-twitter"></i>
