se agrega cambios

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     </header>
     <div class="promo">
-        <div class="prompo-txt">
+        <div class="promo-txt">
             <h2>Promociones</h2>
         </div>
     </div>
@@ -92,30 +92,38 @@
         <input type="radio" name="slide" id="slide2">
         <input type="radio" name="slide" id="slide3">
 
-        <div class="slide">
+        <div class="slides">
             <div class="slide">
                 <img src="./img/deku.png" alt="Slide 1">
                 <div class="slide-content">
                     <h2>Funko Pop Deku - My Hero Academia</h2>
-                    <p>$44.500,00</p>
-                    <a href="#" class="btn-comprar">Agregar al carrito</a>
+                    <div class="prices">
+                        <p class="price-1">$44.500,00</p>
+                        <p class="price-2">$35.600,00</p>
+                    </div>
+                    <a href="#" class="btn-2">Agregar al carrito</a>
                 </div>
             </div>
             <div class="slide">
                 <img src="./img/deadpool.png" alt="Slide 2">
                 <div class="slide-content">
                     <h2>Funko Pop Deadpool - Deadpool</h2>
-                    <p>$60.900,00</p>
-                    <a href="#" class="btn-comprar">Agregar al carrito</a>
+                    <div class="prices">
+                        <p class="price-1">$60.900,00</p>
+                        <p class="price-2">$48.720,00</p>
+                    </div>
+                    <a href="#" class="btn-2">Agregar al carrito</a>
                 </div>
             </div>
-
             <div class="slide">
                 <img src="./img/groot.png" alt="Slide 3">
                 <div class="slide-content">
                     <h2>Funko Pop Groot - Guardianes de la Galaxia</h2>
-                    <p>$47.500,00</p>
-                    <a href="#" class="btn-comprar">Agregar al carrito</a>
+                    <div class="prices">
+                        <p class="price-1">$47.500,00</p>
+                        <p class="price-2">$37.600.00</p>
+                    </div>
+                    <a href="#" class="btn-2">Agregar al carrito</a>
                 </div>
             </div>
         </div>
@@ -152,7 +160,7 @@
                 </div>
             </div>
             <div class="product-content" id="product-2">
-                <img src="img/kisspng-more-of-the-joy-of-painting-funko-pop-television-b-bob-ross-5b359f86c0d2c4.4723694415302409027898.png"
+                <img src="img/ace.png"
                     alt="">
                 <div class="product-txt">
                     <h4>Funko Pop Ace - One Piece</h4>
